// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a full image set properly 1`] = `
<div
  style={
    Object {
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="file__FullWrapper-s4tso9a-0 jfGOzP"
  >
    <div
      className="sc-bdVaJa lmSTxo"
    >
      <div
        className="file__Title-s4tso9a-3 ggnjUT"
      >
        The Work of Bruce M. Sherman
      </div>
      <div
        className="file__SubTitle-s4tso9a-4 jiIFlB"
      >
        <div
          className="file__SubTitlePrompt-s4tso9a-5 jzqZnG"
        >
          View Slideshow
        </div>
        <div
          className="file__SubTitleCount-s4tso9a-6 dGrdgh"
        >
          3
           Images
        </div>
      </div>
    </div>
    <div
      className="file__IconContainer-s4tso9a-7 hkKsVE"
    >
      <svg
        data-name="imageset"
        id="imageset"
        viewBox="0 0 44 44"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6760.67,551.72h-32v-32h32v32Zm-30-2h28v-28h-28v28Z"
          transform="translate(-6728.67 -507.72)"
        />
        <polygon
          points="38 37 36 37 36 8 7 8 7 6 38 6 38 37"
        />
        <polygon
          points="44 31 42 31 42 2 13 2 13 0 44 0 44 31"
        />
      </svg>
    </div>
  </div>
  <img
    src="https://d32dm0rphc51dk.cloudfront.net/0aRUvnVgQKbQk5dj8xcCAg/larger.jpg"
    width="100%"
  />
</div>
`;

exports[`renders a mini image set properly 1`] = `
<div
  style={
    Object {
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    className="file__MiniWrapper-s4tso9a-1 jYDKu"
  >
    <img
      height="100%"
      src="https://d32dm0rphc51dk.cloudfront.net/0aRUvnVgQKbQk5dj8xcCAg/larger.jpg"
      width="auto"
    />
    <div
      className="file__MiniInner-s4tso9a-2 dLBXNT"
    >
      <div
        className="sc-bdVaJa hskcns"
      >
        <div
          className="file__Title-s4tso9a-3 ggnjUT"
        >
          The Work of Bruce M. Sherman
        </div>
        <div
          className="file__SubTitle-s4tso9a-4 jiIFlB"
        >
          <div
            className="file__SubTitlePrompt-s4tso9a-5 jzqZnG"
          >
            View Slideshow
          </div>
          <div
            className="file__SubTitleCount-s4tso9a-6 dGrdgh"
          >
            3
             Images
          </div>
        </div>
      </div>
      <div
        className="file__IconContainer-s4tso9a-7 hkKsVE"
      >
        <svg
          data-name="imageset"
          id="imageset"
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6760.67,551.72h-32v-32h32v32Zm-30-2h28v-28h-28v28Z"
            transform="translate(-6728.67 -507.72)"
          />
          <polygon
            points="38 37 36 37 36 8 7 8 7 6 38 6 38 37"
          />
          <polygon
            points="44 31 42 31 42 2 13 2 13 0 44 0 44 31"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
